kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: epic-infra-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "epic-infra-ip"
    networking.gke.io/managed-certificates: epic-cert
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - http:
      paths:
      - path: /tweets/*
        backend:
          serviceName: tweets-api
          servicePort: 8080
      - path: /events/*
        backend:
          serviceName: events-api
          servicePort: 8080
      - path: /users/*
        backend:
           serviceName: auth-api
           servicePort: 8080
